[gd_scene load_steps=20 format=3 uid="uid://8h80kcye77gd"]

[ext_resource type="Script" uid="uid://bkcwd0kfg6bjt" path="res://Scripts/City/power_plant.gd" id="1_ho2cs"]
[ext_resource type="Theme" uid="uid://crmwd4ulbqdbp" path="res://HUD.tres" id="2_7hj7r"]
[ext_resource type="PackedScene" uid="uid://078tgcvsvcbr" path="res://Scenes/UI/DistrictUpgradesMenu.tscn" id="2_o1fab"]
[ext_resource type="Texture2D" uid="uid://hvbkjh106y7y" path="res://Icons/Additional/Upgrades_bottom.png" id="3_wvn1h"]
[ext_resource type="Texture2D" uid="uid://hnvdw0ewvlpq" path="res://Icons/Additional/Info_Bubble.png" id="4_1edgi"]
[ext_resource type="AudioStream" uid="uid://d15seqb5v0lny" path="res://Audio/SFX/light-switch-on-382714.mp3" id="4_af8px"]
[ext_resource type="Texture2D" uid="uid://dm88on4ur3kty" path="res://Icons/Upgrades/Electricity.png" id="4_ktors"]
[ext_resource type="AudioStream" uid="uid://cfablmg0cs227" path="res://Audio/SFX/diesel-power-generator-33638.mp3" id="5_mmgw8"]
[ext_resource type="AudioStream" uid="uid://cvdy7bnk52bqq" path="res://Audio/SFX/book-opening-345808.mp3" id="9_ktors"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ktors"]
texture = ExtResource("3_wvn1h")

[sub_resource type="DPITexture" id="DPITexture_ktors"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".75\" rx=\"7\"/><circle cx=\"24\" cy=\"8\" r=\"5\" fill=\"#1a1a1a\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_m3umb"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><g fill-opacity=\".5\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" rx=\"7\"/><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"#fff\"/></g></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_1wbtk"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".37\" rx=\"7\"/><circle cx=\"24\" cy=\"8\" r=\"5\" fill=\"#1a1a1a\" fill-opacity=\".5\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_8ty0h"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><g fill-opacity=\".25\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" rx=\"7\"/><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"#fff\"/></g></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_d5hin"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".75\" rx=\"7\"/><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"#1a1a1a\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_yv24s"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><g fill-opacity=\".5\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" rx=\"7\"/><circle cx=\"24\" cy=\"8\" r=\"5\" fill=\"#fff\"/></g></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_km315"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#fff\" fill-opacity=\".37\" rx=\"7\"/><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"#1a1a1a\" fill-opacity=\".5\"/></svg>
"
base_scale = 3.0

[sub_resource type="DPITexture" id="DPITexture_uhana"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"32\" height=\"16\"><g fill-opacity=\".25\"><rect width=\"30\" height=\"14\" x=\"1\" y=\"1\" fill=\"#1a1a1a\" rx=\"7\"/><circle cx=\"24\" cy=\"8\" r=\"5\" fill=\"#fff\"/></g></svg>
"
base_scale = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j064q"]
bg_color = Color(0.33844706, 0.13373291, 0.08383446, 1)

[node name="PowerPlant" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ho2cs")

[node name="BG" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_right = 600.0
offset_bottom = 300.0
theme = ExtResource("2_7hj7r")
theme_override_styles/panel = SubResource("StyleBoxTexture_ktors")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 23.0
offset_right = 462.0
offset_bottom = 175.0
theme = ExtResource("2_7hj7r")
theme_override_constants/separation = 15

[node name="DistrictName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Gives" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Produces"

[node name="EnergyCount" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "000"

[node name="Energy" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_ktors")
expand_mode = 2

[node name="On_Off" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 205.0
offset_right = 287.0
offset_bottom = 269.0
theme = ExtResource("2_7hj7r")
theme_override_constants/separation = 2

[node name="Off" type="Label" parent="On_Off"]
layout_mode = 2
text = "Off"

[node name="Check" type="CheckButton" parent="On_Off"]
layout_mode = 2
theme_override_icons/checked = SubResource("DPITexture_ktors")
theme_override_icons/unchecked = SubResource("DPITexture_m3umb")
theme_override_icons/checked_disabled = SubResource("DPITexture_1wbtk")
theme_override_icons/unchecked_disabled = SubResource("DPITexture_8ty0h")
theme_override_icons/checked_mirrored = SubResource("DPITexture_d5hin")
theme_override_icons/unchecked_mirrored = SubResource("DPITexture_yv24s")
theme_override_icons/checked_disabled_mirrored = SubResource("DPITexture_km315")
theme_override_icons/unchecked_disabled_mirrored = SubResource("DPITexture_uhana")

[node name="On" type="Label" parent="On_Off"]
layout_mode = 2
text = "On"

[node name="DebugBrake" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 161.0
offset_top = 15.0
offset_right = 279.0
offset_bottom = 46.0
text = "[Debug] Strike"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 21.0
offset_right = 67.0
offset_bottom = 61.0
scale = Vector2(6, 6)
theme_override_styles/panel = SubResource("StyleBoxFlat_j064q")

[node name="BrokenLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.7109377
offset_top = 12.500001
offset_right = 69.71094
offset_bottom = 35.5
scale = Vector2(0.50610095, 0.50610095)
text = "BROKEN"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 8.166666
offset_top = 30.66667
offset_right = 137.16667
offset_bottom = 70.66667
scale = Vector2(0.19999993, 0.19999993)

[node name="FixButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Fix"

[node name="FixCost" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "000"

[node name="гривнів" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "гривнів"

[node name="Fixing" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 4.6666665
offset_top = 5.4999995
offset_right = 58.666668
offset_bottom = 59.5
scale = Vector2(0.5533335, 0.5533335)

[node name="FixTickTimer" type="Timer" parent="Panel/Fixing"]
wait_time = 0.1
one_shot = true

[node name="Fixing" type="Label" parent="Panel/Fixing"]
layout_mode = 2
text = "Fixing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/Fixing"]
layout_mode = 2
step = 1.0

[node name="Info" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 482.0
offset_top = 20.0
offset_right = 546.0
offset_bottom = 84.0
tooltip_text = "Test Tooltip"
theme = ExtResource("2_7hj7r")
texture = ExtResource("4_1edgi")
expand_mode = 2
stretch_mode = 4

[node name="DistrictUpgradesMenu" parent="." instance=ExtResource("2_o1fab")]
layout_mode = 1
offset_left = 263.0
offset_top = 192.0
offset_right = 263.0
offset_bottom = 192.0

[node name="Check" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_af8px")
volume_db = -15.0
max_distance = 5000.0
bus = &"SFX"

[node name="Generators" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("5_mmgw8")
volume_db = -55.0
max_distance = 5000.0
attenuation = 2.1435478
bus = &"SFX"

[node name="Fold" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_ktors")
volume_db = -10.0
max_distance = 5000.0
bus = &"SFX"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="toggled" from="On_Off/Check" to="." method="_on_check_toggled"]
[connection signal="pressed" from="DebugBrake" to="." method="_on_debug_brake_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/FixButton" to="." method="_on_fix_button_pressed"]
[connection signal="timeout" from="Panel/Fixing/FixTickTimer" to="." method="_on_fix_tick_timer_timeout"]
